--- a/research/index.html
+++ b/research/index.html
@@ -70,6 +70,18 @@
 <p>Click on individual entries for more information and to download papers. You can also download my papers from <a rel="noreferrer noopener" href="https://philpeople.org/profiles/chong-ming-lim" data-type="link" data-id="https://philpeople.org/profiles/chong-ming-lim" target="_blank">PhilPapers</a> and <a rel="noreferrer noopener" href="https://nanyang.academia.edu/ChongMingLim" data-type="link" data-id="https://nanyang.academia.edu/ChongMingLim" target="_blank">Academia.edu</a>. </p>
 
 
+<details>
+<summary>2024 (forthcoming). Review of <em>The Epistemology of Protest: Silencing, Epistemic Activism, and the Communicative Life of Resistance</em>, by José Medina.<em><span style="color: blue;">Ethics</span></em>.</summary>
+<p><small>Abstract: I review José Medina's book.<a href="https://www.dropbox.com/scl/fi/alha64w797ddci0e94ffd/Lim-2024-Ethics-rev.pdf?rlkey=10co6i2gxso1pysioi25nuxu7&dl=0" target="_blank" rel="noopener noreferrer">[PDF]</a></small></p>
+</details>
+
+
+
+<details>
+<summary>2024 (forthcoming). Objectionable Commemorations: Ethical and Political Issues. <em><span style="color: blue;">Philosophy Compass</span></em>.</summary>
+<p><small>Abstract: The term, "objectionable commemorations”, refers to a broad category of public artefacts – such as, and especially, memorials, monuments and statues – that are regarded as morally problematic in virtue of what or whom they honour. In this regard, they are a special class of public artefacts that are subject to public contestation. In this paper, we survey the general ethical and political issues on this topic. First, we categorise the arguments on offer in the literature, concerning the objectionable nature of such commemorations. Second, we review common political responses to objectionable commemorations. Finally, we identify fruitful areas for further philosophical inquiry on this topic.<a href="https://www.dropbox.com/scl/fi/41avpoz7y7h1nivvty4ow/Lim-Lai-2024-PC.pdf?rlkey=qihyc1tlk8wnm5rfgelo9bjub&dl=0" target="_blank" rel="noopener noreferrer">[PDF]</a></small></p>
+</details>
+
 
 <details>
 <summary>2023. The legitimate targets of political resistance. <em><span style="color: blue;">Philosophers&#8217; Imprint</span></em> 23(1)(8): 1-17.</summary>
@@ -93,7 +105,7 @@
 
 
 <details>
-<summary>2022. Review of <em>The Minority Body</em>, by Elizabeth Barnes. <em><span style="color: blue;">Mind</span></em> 131(522): 650-659. Invited contribution.</summary>
+<summary>2022. Review of <em>The Minority Body: A Theory of Disability</em>, by Elizabeth Barnes. <em><span style="color: blue;">Mind</span></em> 131(522): 650-659. Invited contribution.</summary>
 <p><small>Abstract: I review Elizabeth Barnes&#8217; book.<a href="https://www.dropbox.com/scl/fi/k92a284b4eqkv94wyuulo/Lim-2020-MIND-rev.pdf?rlkey=we0tvncfb07m1q6em91xp7v7q&#038;dl=0" target="_blank" rel="noopener noreferrer">[PDF]</a><a href="https://academic.oup.com/mind/advance-article/doi/10.1093/mind/fzaa075/6008685?guestAccessKey=f665109c-873d-44b2-8e54-dd6ca21dfcad" target="_blank" rel="noopener noreferrer">[Link]</a></small></p></details>
 
 
