--- a/research/index.html
+++ b/research/index.html
@@ -71,14 +71,14 @@
 
 
 <details>
-<summary>2024 (forthcoming). Review of <em>The Epistemology of Protest: Silencing, Epistemic Activism, and the Communicative Life of Resistance</em>, by José Medina.<em><span style="color: blue;">Ethics</span></em>.</summary>
+<summary>2024 (forthcoming). Review of <em>The Epistemology of Protest: Silencing, Epistemic Activism, and the Communicative Life of Resistance</em>, by José Medina. <em><span style="color: blue;">Ethics</span></em>.</summary>
 <p><small>Abstract: I review José Medina's book.<a href="https://www.dropbox.com/scl/fi/alha64w797ddci0e94ffd/Lim-2024-Ethics-rev.pdf?rlkey=10co6i2gxso1pysioi25nuxu7&dl=0" target="_blank" rel="noopener noreferrer">[PDF]</a></small></p>
 </details>
 
 
 
 <details>
-<summary>2024 (forthcoming). Objectionable Commemorations: Ethical and Political Issues. <em><span style="color: blue;">Philosophy Compass</span></em>.</summary>
+<summary>2024 (forthcoming). Objectionable Commemorations: Ethical and Political Issues. <em><span style="color: blue;">Philosophy Compass</span></em>. Co-authored with <a href="https://sites.google.com/view/tenhernglai" target="_blank" rel="noopener">Ten-Herng Lai</a>.</summary>
 <p><small>Abstract: The term, "objectionable commemorations”, refers to a broad category of public artefacts – such as, and especially, memorials, monuments and statues – that are regarded as morally problematic in virtue of what or whom they honour. In this regard, they are a special class of public artefacts that are subject to public contestation. In this paper, we survey the general ethical and political issues on this topic. First, we categorise the arguments on offer in the literature, concerning the objectionable nature of such commemorations. Second, we review common political responses to objectionable commemorations. Finally, we identify fruitful areas for further philosophical inquiry on this topic.<a href="https://www.dropbox.com/scl/fi/41avpoz7y7h1nivvty4ow/Lim-Lai-2024-PC.pdf?rlkey=qihyc1tlk8wnm5rfgelo9bjub&dl=0" target="_blank" rel="noopener noreferrer">[PDF]</a></small></p>
 </details>
 
@@ -91,7 +91,7 @@
 
 
 <details>
-<summary>2023. Environmental activism and the fairness of costs argument for uncivil disobedience. <em><span style="color: blue;">Journal of the American Philosophical Association</span></em>. Co-authored with <a href="https://sites.google.com/view/tenhernglai" target="_blank" rel="noopener">Ten-Herng Lai</a>.</summary>
+<summary>2023. Environmental activism and the fairness of costs argument for uncivil disobedience. <em><span style="color: blue;">Journal of the American Philosophical Association</span></em> 9(3): 490-509. Co-authored with <a href="https://sites.google.com/view/tenhernglai" target="_blank" rel="noopener">Ten-Herng Lai</a>.</summary>
 <p><small>Abstract: Social movements often impose nontrivial costs on others against their wills. Civil disobedience is no exception. How can social movements in general, and civil disobedience in particular, be justifiable despite this apparent wrong-making feature? We examine an intuitively plausible account – it is fair that everyone should bear the burdens of tackling injustice. We extend this fairness-based argument for civil disobedience to defend some acts of uncivil disobedience. Focusing on uncivil environmental activism – such as ecotage (sabotage with the aim of protecting the environment) – we argue that some acts of uncivil disobedience can be morally superior to their civil counterparts, when and because such acts target people who are responsible for environmental threats. Indeed, insofar as some acts of uncivil disobedience can more accurately target responsible people, they can better satisfy the demands of fairness compared to their civil counterparts. In some circumstances, our argument may require activists to engage in uncivil disobedience even when civil disobedience is available.<a href="https://www.dropbox.com/scl/fi/j11w1eqzme9oci2eh0cpc/Lai-Lim-2023-JAPA.pdf?rlkey=go42utqk2oyv72u1fyaxabcg7&#038;dl=0" target="_blank" rel="noopener noreferrer">[PDF]</a><a href="https://www.cambridge.org/core/journals/journal-of-the-american-philosophical-association/article/abs/environmental-activism-and-the-fairness-of-costs-argument-for-uncivil-disobedience/B9E1610FE8E4923458AF81B27C9EC582" target="_blank" rel="noopener noreferrer">[Link]</a></small></p>
 </details>
 
@@ -111,7 +111,7 @@
 
 
 <details>
-<summary>2021. Differentiating disobedients. <em><span style="color: blue;">Journal of Ethics and Social Philosophy </span></em><span style="color: blue;">20(2): 119-143</span>.</summary>
+<summary>2021. Differentiating disobedients. <em><span style="color: blue;">Journal of Ethics and Social Philosophy </span></em>20(2): 119-143.</summary>
 <p><small>Abstract: Conscientious disobedients often face the demand to differentiate themselves from criminals whose law-breaking actions are not undergirded by conscientious convictions. Within public and philosophical discourse, conscientious disobedients are often criticised on the basis that their actions render them no different from criminals. I provide a qualified defence of disobedients in this essay. I argue that the differentiation demand can be satisfied even by disobedients who engage in what are typically regarded as radical acts of disobedience. In practical terms, this means that even disobedients who engage in actions such as arson, rioting, vandalism or vigilantism can also successfully differentiate themselves from criminals. <a href="https://www.dropbox.com/scl/fi/4uzurpwuphdwx9kff1thn/Lim-2021-JESP.pdf?rlkey=victplnfp2i3xjkhcx6m8w01k&#038;dl=0" target="_blank" rel="noopener noreferrer">[PDF]</a><a href="https://www.jesp.org/index.php/jesp/article/view/1430" target="_blank" rel="noopener">[Link]</a></small></p></details>
 
 
