--- a/teaching/index.html
+++ b/teaching/index.html
@@ -184,12 +184,11 @@
 	</div>
 <!-- #content -->
 
-	<footer id="colophon" class="site-footer" role="contentinfo">
-				<div class="site-info-wrapper clear">
-						<div class="site-info">
-				<a href="http://wordpress.org/">Proudly powered by WordPress</a>
-				<span class="sep"> ~ </span>
-				Theme: Penscratch 2 by <a href="https://wordpress.com/themes/" rel="designer">WordPress.com</a>.			</div>
+<footer id="colophon" class="site-footer" role="contentinfo">
+	<div class="site-info-wrapper clear">
+			<div class="site-info">
+	<span class="sep"> ~ </span>
+	Powered by GitPages.			</div>
 <!-- .site-info -->
 		</div>
 <!-- .site-info-wrapper -->
