--- a/research/index.html
+++ b/research/index.html
@@ -79,7 +79,7 @@
 
 <details>
 <summary>2024 (forthcoming). Objectionable Commemorations: Ethical and Political Issues. <em><span style="color: blue;">Philosophy Compass</span></em>. Co-authored with <a href="https://sites.google.com/view/tenhernglai" target="_blank" rel="noopener">Ten-Herng Lai</a>.</summary>
-<p><small>Abstract: The term, "objectionable commemorations”, refers to a broad category of public artefacts – such as, and especially, memorials, monuments and statues – that are regarded as morally problematic in virtue of what or whom they honour. In this regard, they are a special class of public artefacts that are subject to public contestation. In this paper, we survey the general ethical and political issues on this topic. First, we categorise the arguments on offer in the literature, concerning the objectionable nature of such commemorations. Second, we review common political responses to objectionable commemorations. Finally, we identify fruitful areas for further philosophical inquiry on this topic.<a href="https://www.dropbox.com/scl/fi/41avpoz7y7h1nivvty4ow/Lim-Lai-2024-PC.pdf?rlkey=qihyc1tlk8wnm5rfgelo9bjub&dl=0" target="_blank" rel="noopener noreferrer">[PDF]</a></small></p>
+<p><small>Abstract: The term, "objectionable commemorations”, refers to a broad category of public artefacts – such as, and especially, memorials, monuments and statues – that are regarded as morally problematic in virtue of what or whom they honour. In this regard, they are a special class of public artefacts that are subject to public contestation. In this paper, we survey the general ethical and political issues on this topic. First, we categorise the arguments on offer in the literature, concerning the objectionable nature of such commemorations. Second, we review common political responses to objectionable commemorations. Finally, we identify fruitful areas for further philosophical inquiry on this topic.<a href="https://www.dropbox.com/scl/fi/41avpoz7y7h1nivvty4ow/Lim-Lai-2024-PC.pdf?rlkey=qihyc1tlk8wnm5rfgelo9bjub&dl=0" target="_blank" rel="noopener noreferrer">[PDF]</a>a href="https://compass.onlinelibrary.wiley.com/doi/10.1111/phc3.12963" target="_blank" rel="noopener noreferrer">[Link]</a></small></p>
 </details>
 
 
@@ -105,7 +105,7 @@
 
 
 <details>
-<summary>2022. Review of <em>The Minority Body: A Theory of Disability</em>, by Elizabeth Barnes. <em><span style="color: blue;">Mind</span></em> 131(522): 650-659. Invited contribution.</summary>
+<summary>2022. Review of <em>The Minority Body: A Theory of Disability</em>, by Elizabeth Barnes. <em><span style="color: blue;">Mind</span></em> 131(522): 650-659.</summary>
 <p><small>Abstract: I review Elizabeth Barnes&#8217; book.<a href="https://www.dropbox.com/scl/fi/k92a284b4eqkv94wyuulo/Lim-2020-MIND-rev.pdf?rlkey=we0tvncfb07m1q6em91xp7v7q&#038;dl=0" target="_blank" rel="noopener noreferrer">[PDF]</a><a href="https://academic.oup.com/mind/advance-article/doi/10.1093/mind/fzaa075/6008685?guestAccessKey=f665109c-873d-44b2-8e54-dd6ca21dfcad" target="_blank" rel="noopener noreferrer">[Link]</a></small></p></details>
 
 
@@ -190,12 +190,11 @@
 	</div>
 <!-- #content -->
 
-	<footer id="colophon" class="site-footer" role="contentinfo">
-				<div class="site-info-wrapper clear">
-						<div class="site-info">
-				<a href="http://wordpress.org/">Proudly powered by WordPress</a>
-				<span class="sep"> ~ </span>
-				Theme: Penscratch 2 by <a href="https://wordpress.com/themes/" rel="designer">WordPress.com</a>.			</div>
+<footer id="colophon" class="site-footer" role="contentinfo">
+	<div class="site-info-wrapper clear">
+			<div class="site-info">
+	<span class="sep"> ~ </span>
+	Powered by GitPages.			</div>
 <!-- .site-info -->
 		</div>
 <!-- .site-info-wrapper -->
