--- a/research/index.html
+++ b/research/index.html
@@ -71,11 +71,14 @@
 
 
 <details>
+<summary>2024/5 (Forthcoming). Commemorative artefactual speech. <em><span style="color: blue;">Ergo</span></em>.</summary>
+<p><small>Abstract: Commemorative artefacts purportedly speak - they communicate messages to their audience, even if no words are uttered. Sometimes, such artefacts purportedly communicate demeaning or pejorative messages about some members of society. The characteristics of such speech are, however, under-examined. I present an account of the paradigmatic characteristics of the speech of commemorative artefacts (or, “commemorative artefactual speech”), as a distinct form of political speech. According to my account, commemorative artefactual speech paradigmatically involves the use of an artefact by an authorised member of a group to declare the importance of remembering a subject, in virtue of some feature of the subject. Then, I outline a variety of ways that commemorative artefactual speech can go awry. Such speech can be unauthorised, involve unfair exclusion or incorrect identification, be aesthetically inadequate, invoke clandestine explanations, and be directed at inappropriate subjects. I conclude with a discussion of the implications of my account for resisting problematic commemorative artefactual speech.<a href="https://www.dropbox.com/scl/fi/4fvp0xmblcdlu1s6jjboq/Lim-forthcoming-Ergo.pdf?rlkey=5d043jlfx2u1pufj6azd5mnz6&st=1ezxbifz&dl=0" target="_blank" rel="noopener noreferrer">[PDF]</a><a href="https://" target="_blank" rel="noopener noreferrer">[Link]</a></small></p>
+</details>
+
+<details>
 <summary>2024. Review of <em>The Epistemology of Protest: Silencing, Epistemic Activism, and the Communicative Life of Resistance</em>, by José Medina. <em><span style="color: blue;">Ethics</span></em> 134(4): 599-604.</summary>
 <p><small>Abstract: I review José Medina's book.<a href="https://www.dropbox.com/scl/fi/alha64w797ddci0e94ffd/Lim-2024-Ethics-rev.pdf?rlkey=10co6i2gxso1pysioi25nuxu7&dl=0" target="_blank" rel="noopener noreferrer">[PDF]</a><a href="https://www.journals.uchicago.edu/doi/10.1086/729715" target="_blank" rel="noopener noreferrer">[Link]</a></small></p>
 </details>
-
-
 
 <details>
 <summary>2024. Objectionable Commemorations: Ethical and Political Issues. <em><span style="color: blue;">Philosophy Compass</span></em> 19(2) Online First. Co-authored with <a href="https://sites.google.com/view/tenhernglai" target="_blank" rel="noopener">Ten-Herng Lai</a>.</summary>
