--- a/teaching/index.html
+++ b/teaching/index.html
@@ -75,7 +75,7 @@
 
 
 
-<details><summary><span style="color: blue;">Philosophy of Race and Gender</span>. 2023. </summary>A third-year undergraduate course exploring some of the central issues in the philosophy of race and gender. Topics include: social constructionism, social ontology, racial and sexual discrimination and injustice, intersectionality. Instructor of record.</details>
+<details><summary><span style="color: blue;">Philosophy of Race and Gender</span>. 2023, 2024. </summary>A third-year undergraduate course exploring some of the central issues in the philosophy of race and gender. Topics include: social constructionism, social ontology, racial and sexual discrimination and injustice, intersectionality. Instructor of record.</details>
 
 
 
@@ -91,15 +91,15 @@
 
 
 
-<details><summary><span style="color: blue;">Ethics of Defensive Harming</span>. 2022, 2023. </summary>A fourth-year undergraduate course on the ethics of defensive harming. Topics include: grounds of defensive harming, culpability, liability, complicity, innocent threats, proportionality, necessity, reasonable success, and imminence. Instructor of record.</details>
+<details><summary><span style="color: blue;">Ethics of Defensive Harming</span>. 2022, 2023, 2024. </summary>A fourth-year undergraduate course on the ethics of defensive harming. Topics include: grounds of defensive harming, culpability, liability, complicity, innocent threats, proportionality, necessity, reasonable success, and imminence. Instructor of record.</details>
 
 
 
-<details><summary><span style="color: blue;">Ethics and Public Policy</span>. 2022, 2023. </summary>A fourth-year undergraduate course exploring a series of contentious public issues through a philosophical lens. Topics include: incentives, obscenity, lying, gerrymandering, work, privatisation, basic income, homelessness, migration, affirmative action, and commemoration. Instructor of record.</details>
+<details><summary><span style="color: blue;">Ethics and Public Policy</span>. 2022, 2023, 2024. </summary>A fourth-year undergraduate course exploring a series of contentious public issues through a philosophical lens. Topics include: incentives, obscenity, lying, gerrymandering, work, privatisation, basic income, homelessness, migration, affirmative action, and commemoration. Instructor of record.</details>
 
 
 
-<details><summary><span style="color: blue;">Political Philosophy</span>. 2022, 2023. </summary>A second-year undergraduate introduction to political philosophy. Topics include: Social Contract, justification, authority, freedom, rights, equality, oppression, ideology, feminism, and disobedience. Instructor of record.</details>
+<details><summary><span style="color: blue;">Political Philosophy</span>. 2022, 2023, 2024. </summary>A second-year undergraduate introduction to political philosophy. Topics include: Social Contract, justification, authority, freedom, rights, equality, oppression, ideology, feminism, and disobedience. Instructor of record.</details>
 
 
 
